--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <!-- دکمه تنظیمات -->
-    <button class="settings-button" onclick="toggleSettings()">تنظیمات ساعت خاموشی</button>
+    <button class="settings-button" onclick="toggleSettings()">تنظیمات پلن خاموشی</button>
 
     <!-- فرم تنظیمات -->
     <div class="settings-container" id="settings-container">
