--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="outage-time" id="outage-time"></div>
 
     <div class="image-container">
-        <img src="https://www.beytoote.com/images/stories/fun/power1-outage1-cartoon3.jpg" alt="Power Outage Image" width="300">
+        <img src="https://up.20script.ir/file/23a7-power1-outage1-cartoon3.jpg" alt="Power Outage Image" width="300">
     </div>
 
     <!-- دکمه تنظیمات -->
