--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
             font-family: Arial, sans-serif;
             direction: rtl;
         }
-        .date-time, .outage-time {
+        .date-time {
             font-size: 2em;
-            color: darkblue;
+            color: royalblue;
             margin-top: 20px;
         }
-        .weekday, .hijri-date, .gregorian-date {
+        .weekday {
             font-size: 1.2em;
             margin-top: 10px;
+            color: mediumseagreen;
+        }
+        .hijri-date {
+            font-size: 1.2em;
+            margin-top: 10px;
+            color: purple;
+        }
+        .gregorian-date {
+            font-size: 1.2em;
+            margin-top: 10px;
+            color: darkorange;
         }
         .outage-time {
             font-size: 1.5em;
-            color: darkred;
+            color: crimson;
+            margin-top: 20px;
         }
         .image-container {
             margin-top: 30px;
@@ -53,6 +65,16 @@
             font-size: 1em;
             cursor: pointer;
         }
+        .linkedin-icon {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+        .linkedin-icon img {
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -65,6 +87,13 @@
 
     <div class="image-container">
         <img src="https://up.20script.ir/file/23a7-power1-outage1-cartoon3.jpg" alt="Power Outage Image" width="300">
+    </div>
+
+    <!-- آیکون لینکدین -->
+    <div class="linkedin-icon">
+        <a href="https://www.linkedin.com/in/saber-s-afshar/" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn">
+        </a>
     </div>
 
     <!-- دکمه تنظیمات -->
