--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
             <div>
                 <label><input type="radio" name="schedule" value="4"> طرح 4 (10 تا 22)</label>
             </div>
+            <div>
+                <label><input type="radio" name="schedule" value="1"> طرح 5 (9 تا 19)</label>
+            </div>
+            <div>
+                <label><input type="radio" name="schedule" value="1"> طرح 6 (9 تا 21)</label>
+            </div>
+            <div>
+                <label><input type="radio" name="schedule" value="1"> طرح 7 (11 تا 23)</label>
+            </div>
+            <div>
         </div>
 
         <div>
