--- a/index.html
+++ b/index.html
@@ -108,24 +108,29 @@
                 <label><input type="radio" name="schedule" value="1"> طرح 1 (9 تا 17)</label>
             </div>
             <div>
-                <label><input type="radio" name="schedule" value="2"> طرح 2 (10 تا 18)</label>
+                <label><input type="radio" name="schedule" value="1"> طرح 2 (9 تا 19)</label>
             </div>
             <div>
-                <label><input type="radio" name="schedule" value="3"> طرح 3 (10 تا 20)</label>
+                <label><input type="radio" name="schedule" value="1"> طرح 3 (9 تا 21)</label>
             </div>
             <div>
-                <label><input type="radio" name="schedule" value="4"> طرح 4 (10 تا 22)</label>
+                <label><input type="radio" name="schedule" value="2"> طرح 4 (10 تا 18)</label>
             </div>
             <div>
-                <label><input type="radio" name="schedule" value="1"> طرح 5 (9 تا 19)</label>
+                <label><input type="radio" name="schedule" value="3"> طرح 5 (10 تا 20)</label>
             </div>
             <div>
-                <label><input type="radio" name="schedule" value="1"> طرح 6 (9 تا 21)</label>
+                <label><input type="radio" name="schedule" value="4"> طرح 6 (10 تا 22)</label>
             </div>
             <div>
-                <label><input type="radio" name="schedule" value="1"> طرح 7 (11 تا 23)</label>
+                <label><input type="radio" name="schedule" value="1"> طرح 7 (11 تا 19)</label>
             </div>
             <div>
+                <label><input type="radio" name="schedule" value="1"> طرح 8 (11 تا 21)</label>
+            </div>
+            <div>
+                <label><input type="radio" name="schedule" value="1"> طرح 9 (11 تا 23)</label>
+            </div>
         </div>
 
         <div>
