--- a/index.html
+++ b/index.html
@@ -106,18 +106,26 @@
             <p>انتخاب طرح:</p>
             <div>
                 <label><input type="radio" name="schedule" value="1"> طرح 1 (9 تا 17)</label>
+            </div>
+            <div>
                 <label><input type="radio" name="schedule" value="2"> طرح 2 (9 تا 19)</label>
             </div>
             <div>
                 <label><input type="radio" name="schedule" value="3"> طرح 3 (9 تا 21)</label>
+            </div>
+            <div>
                 <label><input type="radio" name="schedule" value="4"> طرح 4 (10 تا 18)</label>
             </div>
             <div>
                 <label><input type="radio" name="schedule" value="5"> طرح 5 (10 تا 20)</label>
+            </div>
+            <div>
                 <label><input type="radio" name="schedule" value="6"> طرح 6 (10 تا 22)</label>
             </div>
             <div>
                 <label><input type="radio" name="schedule" value="7"> طرح 7 (11 تا 19)</label>
+            </div>
+            <div>
                 <label><input type="radio" name="schedule" value="8"> طرح 8 (11 تا 21)</label>
             </div>
             <div>
@@ -129,26 +137,18 @@
             <p>انتخاب پلن:</p>
             <div>
                 <label><input type="radio" name="plan" value="1"> پلن 1</label>
-            </div>
-            </div>
                 <label><input type="radio" name="plan" value="2"> پلن 2</label>
             </div>
             </div>
                 <label><input type="radio" name="plan" value="3"> پلن 3</label>
-            </div>
-            </div>
                 <label><input type="radio" name="plan" value="4"> پلن 4</label>
             </div>
             </div>
                 <label><input type="radio" name="plan" value="5"> پلن 5</label>
-            </div>
-            </div>
                 <label><input type="radio" name="plan" value="6"> پلن 6</label>
             </div>
             </div>
                 <label><input type="radio" name="plan" value="7"> پلن 7</label>
-            </div>
-            </div>
                 <label><input type="radio" name="plan" value="8"> پلن 8</label>
             </div>
             </div>
