--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
                 <label><input type="radio" name="plan" value="1"> پلن 1</label>
                 <label><input type="radio" name="plan" value="2"> پلن 2</label>
             </div>
-            </div>
+            <div>
                 <label><input type="radio" name="plan" value="3"> پلن 3</label>
                 <label><input type="radio" name="plan" value="4"> پلن 4</label>
             </div>
-            </div>
+            <div>
                 <label><input type="radio" name="plan" value="5"> پلن 5</label>
                 <label><input type="radio" name="plan" value="6"> پلن 6</label>
             </div>
-            </div>
+            <div>
                 <label><input type="radio" name="plan" value="7"> پلن 7</label>
                 <label><input type="radio" name="plan" value="8"> پلن 8</label>
             </div>
-            </div>
+            <div>
                 <label><input type="radio" name="plan" value="9"> پلن 9</label>
             </div>
         </div>
