--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         }
         .logo-container a {
             text-decoration: none;
+            color: #333;
         }
         .logo-container img {
             width: 100px;
@@ -37,20 +38,35 @@
             transform: scale(1.1);
             box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
         }
+        .logo-container .caption {
+            margin-top: 8px;
+            font-size: 16px;
+            font-weight: bold;
+            color: silver;
+        }
     </style>
 </head>
 <body>
     <h1>ساعات خاموشی</h1>
     <div class="logo-container">
-        <a href="Home.html">
-            <img src="https://up.20script.ir/file/331b-house-icon-neumorphism-style-icons-business-white-ui-ux-home-symbol-homepage-app-button-real-estate-building-stay-home-neumorphic-style-vector-illustration-812892-320.jpg" alt="خانه">
-        </a>
-        <a href="Job.html">
-            <img src="https://up.20script.ir/file/1e26-smart-house-logo-smart-house-icon-home-automation-concept-home-system-with-wireless-centralized-control-vector-ui-icon-neumorphic-ui-ux-white-user-interface-web-button-neumorphism-399089-3042.jpg" alt="محل کار">
-        </a>
-        <a href="Bakery.html">
-            <img src="https://github.com/saberafshar93/Khamoshi/blob/main/bread.jpg" alt="نانوایی">
-        </a>
+        <div>
+            <a href="Home.html">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/house.jpg" alt="خانه">
+            </a>
+            <div class="caption">خانه</div>
+        </div>
+        <div>
+            <a href="Bakery.html">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/Bakery.jpg" alt="نانوایی">
+            </a>
+            <div class="caption">نانوایی</div>
+        </div>
+        <div>
+            <a href="Job.html">
+                <img src="https://raw.githubusercontent.com/saberafshar93/Khamoshi/refs/heads/main/job.jpg" alt="محل کار">
+            </a>
+            <div class="caption">محل کار</div>
+        </div>
     </div>
 </body>
 </html>
