--- a/Job.html
+++ b/Job.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>تاریخ و ساعت</title>
+    <title>Job</title>
     <style>
         body {
             text-align: center;
